=================
Changes for Crate
=================

Unreleased
==========

 - Fix: allow more than 1k elements in the IN query

 - allow to use ANY expression to compare primitive values against an array literal

 - Added support for setting the default schema name in the SQLRequest class

 - Fix: ip type conversion did not allow NULL values

 - Fix: Grouping or sorting on a dynamically created column of a partitioned
   table could cause a NullPointerException

 - include jts and spatial4j in client jar in order to properly use
   the ``geopoint`` type

 - produce a crate-client with all dependencies included under the 'io.crate'
   package namespace in order to avoid conflicts

 - Fix: Filtering by `_score` wasn't recognized on group-by queries.

 - Fix: Do not shutdown the BulkShardProcessor while there are pending requests
   anymore

 - Fix: The ``format`` scalar function now always uses Locale.ENGLISH

2015/03/17 0.48.0
=================

 - Fixed misleading error message for trying to group by invalid data type.

 - COPY FROM / COPY TO will now automatically create a quoted URI if only a
   path is given.

 - Updated crash to version 0.11.4 which contains following changes:

    - Fix: print stacktrace when crash is launched in verbose mode

    - Fix: query duration was rounded incorrectly to second precision

    - added ``--format`` command line option
      to support different response output formats such as
      ``tabular``, ``raw``, ``json``, ``csv`` and ``mixed``

    - BREAKING CHANGE
      the ``CONNECT <host>`` client command was changed to ``\connect <host>``
      see documentation for further details

    - alternative cli implementation using prompt_toolkit

    - added coloured printing when in interactive shell

 - Support `ON DUPLICATE KEY UPDATE` while inserting using a query.

 - Fix: Parameter substitution within subscript notation is not
   allowed anymore

 - Optimize OR queries which involve the cluster column.
